--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "nodeJs",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "author": "nusrat",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
